# wse

./: .gitignore  README.md  main.py  pyproject.toml
docs/: index.html  index.md
results/: movies_per_genre_per_year.xlsx  ratings_per_year.xlsx  regional_clusters.xlsx  releases_by_year.xlsx  temporal_clusters.xlsx  types_per_year.xlsx
results/evaluation/: genre_share_percent_by_year.xlsx  genre_yoy_pct_change.xlsx  ratings_yoy_pct_change.xlsx  releases_yoy_evaluation.xlsx  top_genre_per_year.xlsx  top_rating_per_year.xlsx  types_yoy_pct_change.xlsx
results/s1/: movies_per_genre_per_year.xlsx  norm_movies_per_genre_per_year.xlsx  norm_ratings_per_year.xlsx  norm_subgenre_counts.xlsx  norm_types_per_year.xlsx  ratings_per_year.xlsx  releases_by_year.xlsx  subgenre_counts.xlsx  types_per_year.xlsx
results/s3/: cluster_palette.json  regional_clusters.xlsx  sub3_output.txt  temporal_clusters.xlsx
src/: analyzer.py  dataset.py  map.py  perprocess.py  preprocess.py  statistics.py  stats.py
