[tool.poetry]
name = "wse"
version = "0.1.0"
description = "Project for the course Web Science & Engineering DSAIT4055"
authors = ["Vivian Ning <V.Y.Ning@student.tudelft.nl>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
pandas = ">=2.2.3,<3.0.0"
kagglehub = "^0.3.12"
matplotlib = "^3.10.3"
openpyxl = "^3.1.5"
distinctipy = "^1.3.4"
seaborn = ">=0.12.2"
scipy = "^1.15.3"
scikit-learn = "^1.7.0"
adjusttext = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
